   another variable
 - istp.VariableChecks adds check for VALID/SCALE MIN/MAX Entry types
 - istp.VariableChecks adds check for DELTA attributes
 - istp.VariableChecks and FileChecks add check for empty attribute Entries
 - istp.VarBundle class to copy variables, slices, and depends between CDFs
 - istp.nanfill function to replace fill values with NaN
pybats
 - Updated gitm.GitmBin reader to fix failures in Python 3.x.
 - Fix for incorrect Kyoto Kp plots.
 - Fixed open/closed tolerance kwarg not working in add_b_magsphere.
 - Added new stream trace visualization method for Bats2d objects: add_stream_scatter
 - Bats2d.add_b_magsphere and add_stream_scatter now have kwargs for adding arrows on ray traces
 - Updates to ram.RamSat including omnidirectional flux calculation
 - ram.PressureFile fixed for Python 3.x failures
toolbox
 - New function get_url to retrieve data from a URL
 - Change update to retrieve OMNI2 data from SPDF not ViRBO

Changes in Version 0.2.1 (2019-10-02)
=====================================
datamodel
 - Allow access to attributes via "meta" property
irbempy
 - Fix compilation issues on certain systems
poppy
 - Fix bootstrapping when aggregating function has multiple outputs
pycdf
 - Allow access to attributes via "meta" property
 - Single element references now return Python types not numpy scalars
 - Fix type-guessing on numpy object arrays with no values
 - New "istp" module supporting CDFs with ISTP-compliant metadata

Changes in Version 0.2.0 (2019-06-22)
=====================================
- Many installer updates, including binary wheels for Windows
- Fix writing of configuration file on Windows
ae9ap9
 - Fix handling of gzipped files under Windows/Python2
datamodel
 - Datatypes are now explicitly preserved by function "toRecArray"
irbempy
 - Update IRBEMlib to rev616
 - Update build for compatibility with numpy>=1.16 and GCC 8
 - Update retrieval of TS07 dynamic coefficient files
pybats